fix case-profile (#14)
* fix case-profile

* fix case-profile