@@ -1,14 +1,14 @@
 package com.liquibase.services.web.convert;
 
-import com.liquibase.client_entities.CaseThinViewModel;
+import com.liquibase.client_entities.CaseViewModel;
 import com.liquibase.client_entities.ProfileViewModel;
 import com.liquibase.entities.CaseProfile;
 import com.liquibase.entities.Profile;
 import com.liquibase.repositories.CaseProfileDao;
 import com.liquibase.repositories.ProfileDao;
+import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Component;
 
-import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -18,15 +18,15 @@ public class ProfileVmConverter extends AbstractEntityVmConverter<Profile, Profi
 
     private final ProfileDao profileDao;
     private final CaseProfileDao caseProfileDao;
+    private final CaseVmConverter caseVmConverter; //https://www.baeldung.com/circular-dependencies-in-spring
 
 
-//    @Autowired
-//    private CaseVmConverter caseVmConverter;
-
-
-    public ProfileVmConverter(ProfileDao profileDao, CaseProfileDao caseProfileDao) {
+    public ProfileVmConverter(ProfileDao profileDao,
+                              CaseProfileDao caseProfileDao,
+                              @Lazy CaseVmConverter caseVmConverter) {
         this.profileDao = profileDao;
         this.caseProfileDao = caseProfileDao;
+        this.caseVmConverter = caseVmConverter;
     }
 
 
@@ -34,7 +34,7 @@ public class ProfileVmConverter extends AbstractEntityVmConverter<Profile, Profi
     protected void setEntity(Profile profile, ProfileViewModel profileViewModel) {
         if (profileViewModel == null || profile == null)
             throw new IllegalArgumentException();
-        profile.setFirstName(profileViewModel.getFirstName());
+        profile.setName(profileViewModel.getName());
         profile.setPhoto(profileViewModel.getPhoto());
     }
 
@@ -49,31 +49,35 @@ public class ProfileVmConverter extends AbstractEntityVmConverter<Profile, Profi
     }
 
     @Override
-    public ProfileViewModel convertToVM(Profile profile) {
-        //    public ProfileViewModel convertToVM(Profile profile, boolean includeChildren) {
+    public ProfileViewModel convertToVM(Profile entity) {
+        return convertToVM(entity, false);
+    }
+
+    @Override
+//    public ProfileViewModel convertToVM(Profile profile) {
+    public ProfileViewModel convertToVM(Profile profile, boolean includeChildren) {
 
         if (profile == null) return null;
         ProfileViewModel profileViewModel = new ProfileViewModel();
-        profileViewModel.setFirstName(profile.getFirstName());
+        profileViewModel.setName(profile.getName());
         profileViewModel.setId(profile.getId());
         profileViewModel.setPhoto(profile.getPhoto());
-//        if (includeChildren) {
-//            List<CaseProfile> allByProfile = caseProfileDao.getAllByProfile(profile.getId());
-//            List<CaseViewModel> caseList = allByProfile.stream()
-//                    .map(CaseProfile::getCase)
-//                    .map(e -> caseVmConverter.convertToVM(e, false))
-//                    .collect(Collectors.toList());
-//            profileViewModel.setCaseList(caseList);
-//        }
+        if (includeChildren) {
+            List<CaseProfile> allByProfile = caseProfileDao.getAllByProfile(profile.getId());
+            List<CaseViewModel> caseList = allByProfile.stream()
+                    .map(CaseProfile::getCase)
+                    .map(caseVmConverter::convertToVM)
+                    .toList();
+            profileViewModel.setCaseList(caseList);
+        }
 
 
-        List<CaseProfile> allByProfile = caseProfileDao.getAllByProfile(profile.getId());
-        List<CaseThinViewModel> caseThinViewModelList = allByProfile.stream()
-                .map(caseProfile -> new CaseThinViewModel(caseProfile.getCase().getId(), caseProfile.getCase().getName()))
-                .sorted(Comparator.comparing(CaseThinViewModel::getName))
-                .collect(Collectors.toList());
-
-        profileViewModel.setCaseThinViewModelList(caseThinViewModelList);
+//        List<CaseProfile> allByProfile = caseProfileDao.getAllByProfile(profile.getId());
+//        List<CaseThinViewModel> caseThinViewModelList = allByProfile.stream()
+//                .map(caseProfile -> new CaseThinViewModel(caseProfile.getCase().getId(), caseProfile.getCase().getName()))
+//                .sorted(Comparator.comparing(CaseThinViewModel::getName))
+//                .collect(Collectors.toList());
+//        profileViewModel.setCaseThinViewModelList(caseThinViewModelList);
 
         return profileViewModel;
     }
